# tikzEd

./: CMakeLists.txt
src/: appwindow.cpp  appwindow.h  main.cpp
